--- a/gb/24/11/4/n14363890.md
+++ b/gb/24/11/4/n14363890.md
@@ -40,7 +40,7 @@
 <h2>从刘翔锋案到活摘幸存者程佩明的比照</h2>
 <p>近期公开发声指证中共活摘器官的法轮功学员程佩明，2004年服刑期间，在大庆第四医院被强行施行手术，身体左侧留下一条35厘米的清晰疤痕。2006年，中共欲对程佩明第二次活摘器官时，程幸运逃脱。</p>
 <p>2020年，程佩明被营救来美后，进行了9次不同的医学影像检查。检测显示，程佩明的肝脏左侧和肺部左侧被部分摘除。该检测结果获得多位器官移植界的权威专家的证实。 （<strong>先前报导：<span style="color: #0000ff;"><a style="color: #0000ff;" href=><a href="https://github.com/1992513/djy/blob/master/gb/24/9/9/n14327247.md#1" target="_blank" rel="noopener">中共活摘器官幸存者：我失去正常劳动能力</a></span></strong>）</p>
-<p>唐靖远指出，刘翔锋在患者不知情的情况之下，直接就割取患者的小肠来用于肠管移植。程佩明的遭遇看上去也比较相似，但是比起那些患者来说，陈佩明当时面对的情况更险恶。</p>
+<p>唐靖远指出，刘翔锋在患者不知情的情况之下，直接就割取患者的小肠来用于肠管移植。程佩明的遭遇看上去也比较相似，但是比起那些患者来说，程佩明当时面对的情况更险恶。</p>
 <p>刘翔锋还不敢直接去伤害患者的性命，只是致伤或者是致残。但是程佩明当时是在监狱，他被切掉器官以后，其实当局是不准备让他活着出来的，当局有言在先，说手术死亡率非常高，可能会高达80%等等，都已经铺垫好了，他的器官都摘完以后，就要把他宣布死亡。</p>
 <h2>中共庞大强摘器官黑色产业链上的一种支链</h2>
 <p>唐靖远归结说，从刘翔锋案被知情人披露的内幕看，中共活摘器官的整个产业链，除了由国家行为，就是大规模秘密虐杀法轮功学员或者是维族人或者是其他的政治犯，异议人士等等，已经派生出来很多的旁支，比如说像刘翔锋这一伙人形成中共庞大的黑色产业链上的一种支链。</p>
@@ -53,37 +53,33 @@
 <li><span style="font-weight: bold; display: inline-block;"><a style="color: #0000ff;" href=><a href="https://github.com/1992513/djy/blob/master/gb/24/6/16/n14271059.md#1" target="_blank" rel="noopener">儿子被判定脑死亡 母亲告武汉医院为器官害命</a></span></li>
 <li><span style="font-weight: bold; display: inline-block;"><a style="color: #0000ff;" href=><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14308129.md#1" target="_blank" rel="noopener">【中国观察】央企买尸大案水有多深？</a></span></li>
 </ul>
-	
 <strong>相关新闻：</strong>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/22/8/19/n13806299.md#1">【新闻看点】湘雅二院爆丑闻 暗保刘翔峰三原因</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/22/8/26/n13810352.md#1">湘雅二院刘翔峰被查 舆论直指医院难逃责任</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/31/n14361597.md#1">湖南“恶魔医生”刘翔峰一审被判17年</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/4/n14363778.md#1">石正丽到广州实验室任职 曾被疑泄漏新冠病毒</a></li>
-<hr>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545620.md#1">湖南一景区11级大风吹翻游船 29人落水</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/ntdtv/blob/master/gb/2020/04/16/a102824026.md#1" target="_blank">前凤凰网记者：中共迫害法轮功是最大的作恶/a> </li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812825.md#1" target="_blank">潜伏在中华民国和台湾的中共间谍（4）</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/15/10/11/n4547562.md#1" target="_blank">我们告诉未来：封锁与反封锁</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank">303万人举报江泽民</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/17/12/14/n9955432.md#1" target="_blank">文革中自杀的几个名人（3）红岩作者罗广斌</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/14/4/12/n4130061.md#1" target="_blank">正清：法轮功没有“男女双修”</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/30/n14360732.md#1">墨西哥南部丛林发现失落的玛雅古城</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/20/12/9/n12607219.md#1">【元曲大家】散曲第一人马致远</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/28/n14359080.md#1">美国9岁女孩突然描述前世生活 父母惊呆</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/17/n14352322.md#1">【古道人生】父亲嫌女婿家变穷悔婚 女儿守婚约得好结果</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/29/n14359817.md#1">老妇濒死看见天堂地狱 上帝要她带话回人间</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/2/n14363163.md#1">【时事金扫描】以军斩首哈首领 生擒真主党将军</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/1/n14362707.md#1">【新闻欣视角】地缘政治局势突升温 三战临近？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/2/n14363111.md#1">【马克时空】韩朝军力差距大 朝鲜想学现代战争</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/25/n14357530.md#1">搭乘飞机需避免穿哪些衣服 空姐告诉你</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/2/n14362842.md#1">中南海纪念叶选平冥诞用语敏感 内斗引关注</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/26/n14358102.md#1">独家：610内部会议记录泄基层运作内幕（上）</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/31/n14361950.md#1">揭娱圈潜规则 赵丽颖《乔妍的心事》登东京影展</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/1/n14362693.md#1">贝克汉姆夫妇为女儿铺路 13岁哈珀踏入娱乐圈</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/2/n14363160.md#1">洪金宝自称前世是一头牛 武功胜过甄子丹</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/2/n14363143.md#1">汤唯被大衣披肩价格惊呆 逗趣表情笑翻网友</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/1/n14362022.md#1">真人机动战士电影《钢弹》 2025年开始制作</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/3/n14363370.md#1">这一物可清理马克杯里的茶渍 效果超乎想像</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/29/n14359772.md#1">三种超级食物 提升免疫功能</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/30/n14360919.md#1">青花菜与绿花椰菜不同 别再傻傻分不清</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/31/n14361469.md#1">“杜布罗夫尼克”旅游 欣赏中世纪古城之美</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/16/n14351530.md#1">50岁以后 开始享受“绕路”的乐趣</a></li>
-<hr>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/18/n14533738.md#1">太子密谋造反 李渊轻诺废储 李世民回朝只是付诸一笑</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/2/n14543500.md#1">【未解之谜】深度解读《天使的遗言》使命与未来 龙树谅传递的终极信息</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/21/n14395345.md#1">【古道人生】对人宽和仁厚最终救了自己两次命</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/29/n14541303.md#1">浮生行吟：说说两个“字”</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/28/n14540909.md#1">【未解之谜】“午夜之锤”早已被预知？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/4/n14544980.md#1">【直播】川普签署“大而美法案”</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545641.md#1">【马克时空】服务一甲子 F-5告别台湾天空</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545198.md#1">【车评】越野猛兽  2025 Toyota Tundra TRD Rally</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/4/n14544650.md#1">煎蛋不必翻面 专家分享不用油或黄油的妙招</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/4/n14544420.md#1">罗马仕被曝停工停产 数十万充电宝无钱退款</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14544361.md#1">德媒：中国电动车市场泡沫即将破裂</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14544376.md#1">章子怡《酱园弄》上映 9岁女儿客串不怯场</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545591.md#1">杨幂上台不慎踩裙?跌倒 临场反应令人惊叹</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545630.md#1">陈思诚新片票房惨淡 上映首日9小时仅卖395万</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14544400.md#1">好莱坞男星麦可·麦德森骤逝 享寿67岁</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545423.md#1">第27届台北电影奖完整名单 《大风之岛》摘首奖</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/1/n14542256.md#1">避免洗肾 中医传统疗法助肾功能回升</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14543926.md#1">专家：经常做恶梦的人 早死概率增为3倍</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/1/n14542657.md#1">香蕉的颜色和斑点透露了什么</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/28/n14540707.md#1">夏日沙拉这样做 清爽又健康 色彩缤纷又开胃</a></li>
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/24/11/4/n14363890.htm">【中国观察】“恶魔医生”刘翔峰案背后黑幕</a></p><hr>
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/24/11/4/n14363890.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
